solc_mutator_ossfuzz_seed_corpus/test_sol/test_4e012bbd8a526904a0f7e055dd40887f216acaf34479cd51c57c8e10bb19ed9d_665636d54e43ab6e449944831ad74da09ab12c6e_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
}
function f0(int8 i0)  returns(function () external o0,int80 o1)
{
  o1 = ((((-415034058496122553265116 + 87416681789574378398626) * -13068625040870933293751) - (-240522469091176563925466 / -521591471819069478281225)) % -176610509129495796193286);
  {


{
}
  }
}

==== Source: su1.sol ====
import "su0.sol";
function f1(bytes4 i0,bytes memory i1,uint32 i2) 
{


}
// ----
// TypeError 2326: (su0.sol:89-261): Type rational_const 4790...(39 digits omitted)...6684 / 521591471819069478281225 is not implicitly convertible to expected type int80. Try converting to type ufixed256x54 or use an explicit conversion.
